// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>opt0</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > correctly limits options when message wraps to multiple lines 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  This is a very 
<cyan>│</fg>  long message that
<cyan>│</fg>   will wrap to 
<cyan>│</fg>  multiple lines
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <green>●</fg> Option 2
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>...</bold>
<cyan>│</fg>  <green>●</fg> Option 3
<cyan>│</fg>  <dim>○</bold> <dim>Option 4</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "<cyan>│</fg>  <green>●</fg> Option 4
<cyan>│</fg>  <dim>○</bold> <dim>Option 5</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  This is a very 
<green>│</fg>  long message that
<green>│</fg>   will wrap to 
<green>│</fg>  multiple lines
<dim>│</fg>  <dim>Option 4</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > correctly limits options with explicit multiline message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Choose an option:
<cyan>│</fg>  Line 2 of the message
<cyan>│</fg>  Line 3 of the message
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 3</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 3</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <green>●</fg> Option 2
<cyan>│</fg>  <dim>○</bold> <dim>Option 3</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>...</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <green>●</fg> Option 3
<cyan>│</fg>  <dim>○</bold> <dim>Option 4</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Choose an option:
<green>│</fg>  Line 2 of the message
<green>│</fg>  Line 3 of the message
<dim>│</fg>  <dim>Option 3</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> opt0
<dim>○</bold> <dim>opt1</bold>

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > handles mixed size re-renders 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Whatever
<cyan>│</fg>  <green>●</fg> Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=12>",
  "<erase.down>",
  "<dim>│</fg>
<cyan>◆</fg>  Whatever
<cyan>│</fg>  <dim>...</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <green>●</fg> Option 3
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Whatever
<dim>│</fg>  <dim>Option 3</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim>○</fg> <dim>Option 0</fg>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>│</fg>  <dim>○</fg> <dim>Option 2</fg> <dim>(Hint 2)</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders multi-line option labels 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  with multiple lines
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <dim>with multiple lines</bold>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0 <dim>(Hint 0)</bold>
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> opt0
<dim>○</bold> <dim>opt1</bold>

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long cancelled message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo foo foo foo foo foo foo
<green>│</fg>   foo foo foo foo foo foo 
<green>│</fg>  foo foo foo foo foo foo foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long results 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>opt0</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > correctly limits options when message wraps to multiple lines 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  This is a very 
<cyan>│</fg>  long message that
<cyan>│</fg>   will wrap to 
<cyan>│</fg>  multiple lines
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <green>●</fg> Option 2
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>...</bold>
<cyan>│</fg>  <green>●</fg> Option 3
<cyan>│</fg>  <dim>○</bold> <dim>Option 4</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "<cyan>│</fg>  <green>●</fg> Option 4
<cyan>│</fg>  <dim>○</bold> <dim>Option 5</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  This is a very 
<green>│</fg>  long message that
<green>│</fg>   will wrap to 
<green>│</fg>  multiple lines
<dim>│</fg>  <dim>Option 4</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > correctly limits options with explicit multiline message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Choose an option:
<cyan>│</fg>  Line 2 of the message
<cyan>│</fg>  Line 3 of the message
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 3</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 3</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <green>●</fg> Option 2
<cyan>│</fg>  <dim>○</bold> <dim>Option 3</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>...</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <green>●</fg> Option 3
<cyan>│</fg>  <dim>○</bold> <dim>Option 4</bold>
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Choose an option:
<green>│</fg>  Line 2 of the message
<green>│</fg>  Line 3 of the message
<dim>│</fg>  <dim>Option 3</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> opt0
<dim>○</bold> <dim>opt1</bold>

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > handles mixed size re-renders 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Whatever
<cyan>│</fg>  <green>●</fg> Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  Long Option
<cyan>│</fg>  <dim>...</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=12>",
  "<erase.down>",
  "<dim>│</fg>
<cyan>◆</fg>  Whatever
<cyan>│</fg>  <dim>...</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>│</fg>  <dim>○</bold> <dim>Option 2</bold>
<cyan>│</fg>  <green>●</fg> Option 3
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Whatever
<dim>│</fg>  <dim>Option 3</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim>○</fg> <dim>Option 0</fg>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>│</fg>  <dim>○</fg> <dim>Option 2</fg> <dim>(Hint 2)</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders multi-line option labels 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  with multiple lines
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Option 0</bold>
<cyan>│</fg>  <dim>with multiple lines</bold>
<cyan>│</fg>  <green>●</fg> Option 1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0 <dim>(Hint 0)</bold>
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> opt0
<dim>○</bold> <dim>opt1</bold>

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long cancelled message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo foo foo foo foo foo foo
<green>│</fg>   foo foo foo foo foo foo 
<green>│</fg>  foo foo foo foo foo foo foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long results 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo foo foo 
<cyan>│</fg>  foo foo foo foo foo foo foo
<cyan>│</fg>   foo foo foo foo
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo foo foo foo</bold>
<dim>│</fg>  <dim> foo foo foo foo foo foo </bold>
<dim>│</fg>  <dim>foo foo foo foo</bold>",
  "
",
  "<cursor.show>",
]
`;
